--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Tahoma, sans-serif
+    font-family: Verdana, Tahoma, sans-serif;
+    vertical-align: top;
 }
 .Main {
     /* text-align: center; */
