--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -32,6 +32,14 @@
     height: 50px;
     border: 5px solid black;
 }
+.Main-button-notification {
+    color: #000000;
+    background-color: #fae457;
+    font-size: calc(12px + 2vmin);
+    width: 90%;
+    height: 50px;
+    border: 5px solid black;
+}
 .Main-button-pressed {
     color: rgb(65, 65, 65);
     font-size: calc(12px + 2vmin);
