--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -3,41 +3,50 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Verdana, Tahoma, sans-serif;
-    vertical-align: top;
+    /* vertical-align: top;
+    align-items: center; */
+    /* justify-content: center; */
+    /* display: inline-block; */
 }
 .Main {
     /* text-align: center; */
     background-color: #2d3646;
     min-height: 100vh;
-    align-items: center;
+    /*align-items: center;*/
     text-align: center;
+    /*justify-content: center; */
 }
 .Main-header {
-    justify-content: center;
+    /* justify-content: center; */
     font-size: calc(40px + 2vmin);
     font-weight: 900;
     -webkit-text-stroke: 3px rgb(0, 0, 0);
-    color: rgb(220, 220, 220)
+    color: rgb(220, 220, 220);
+    /* align-items: center; */
 }
 .Main-body {
     font-size: calc(20px + 2vmin);
     -webkit-text-stroke: 1px rgb(0, 0, 0);
     font-weight: 500;
     color: rgb(143, 143, 143);
+    /* align-items: center;
+    justify-content: center; */
 }
 .Main-box {
     color: #000000;
     background-color: #ffffff;
     font-size: calc(12px + 2vmin);
     width: 90%;
-    height: 50px;
     border: 5px solid black;
+    /* align-items: center;
+    justify-content: center; */
 }
 .Main-box-notif {
     color: #000000;
     background-color: #fae457;
     font-size: calc(12px + 2vmin);
     width: 90%;
-    height: 50px;
     border: 5px solid black;
+    /* align-items: center;
+    justify-content: center; */
 }
