Add random role generator

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -41,12 +41,11 @@
     /* align-items: center;
     justify-content: center; */
 }
-.Main-box-notif {
+/* .Main-box-notif {
     color: #000000;
     background-color: #fae457;
     font-size: calc(12px + 2vmin);
     width: 90%;
     border: 5px solid black;
-    /* align-items: center;
-    justify-content: center; */
-}
+} 
+*/
