todo colors, suffixes, wins

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -15,9 +15,12 @@
     text-align: center;
     overflow-y: hidden;
 }
+/* .Background {
+    background-color: #2d3646;
+} */
 .Main {
     /* text-align: center; */
-    background-color: #2d3646;
+    /* background-color: #2d3646; */
     height: 100vh;
     /*align-items: center;*/
     text-align: center;
