--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     /* vertical-align: top;
     align-items: center; */
     /* justify-content: center; */
